# gitmind

./: .env  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  release.yaml
e2e/: test_describe_commit.py  test_grade_commit.py  test_integration.py
git_critic/: commit.py  configuration_types.py  data_types.py  exceptions.py  prompts.py  repository.py  rules.py
git_critic/caching/: __init__.py  base.py  file.py  memory.py
git_critic/llm/: base.py  groq_client.py  openai_client.py
git_critic/prompts/: __init__.py  base.py  describe_commit.py  grade_commit.py
git_critic/utils/: chunking.py  env.py  logger.py  serialization.py  sync.py
gitmind/: __main__.py  config.py  configuration_types.py  exceptions.py  py.typed  rules.py
gitmind/caching/: base.py  file.py  memory.py
gitmind/cli/: __init__.py  _utils.py  main.py
gitmind/cli/commands/: __init__.py  commit.py
gitmind/commit_processing/: commit.py
gitmind/llm/: base.py  groq_client.py  openai_client.py
gitmind/processing/: process_commit.py
gitmind/prompts/: base.py  describe_commit.py  grade_commit.py
gitmind/utils/: chunking.py  commit.py  env.py  logger.py  parsing.py  ref.py  repository.py  serialization.py  sync.py
src/: client.py  commit.py  configuration_types.py  data_types.py  exceptions.py  prompts.py  repository.py  rules.py  types.py
src/caching/: file.py  memory.py
src/llm/: base.py  groq_client.py  openai_client.py  result.md
src/models/: __init__.py  base.py  openai.py
src/utils/: hashing.py  logger.py  serialization.py  sync.py
tests/: commit_test.py  conftest.py  data_fixtures.py  factories.py  helpers.py  prompts_test.py
tests/caching/: file_test.py  memory_test.py
tests/cli/: main_test.py
tests/config/: config_test.py
tests/e2e/: conftest.py  describe_commit_test.py  grade_commit_test.py
tests/llm/: groq_client_test.py  openai_client_test.py  openai_test.py
tests/prompts/: describe_commit_test.py  grade_commit_test.py
tests/src/: commit_test.py  prompts_test.py
tests/utils/: chunking_test.py  env_test.py  hashing_test.py  logger_test.py  parsing_test.py  sync_test.py
